@@ -8,6 +8,7 @@ Version 1.1.1.dev0
   * toggle buttons to on/off editor and preview
   * tabs setting in status bar
   * preferences are save automatical
+  * auto indent is configurable
 
 Version 1.1.0 - 03.08.2017 7:00
 
